# splinter

./: .gitignore  .pre-commit-config.yaml  .pylintrc  allowlist.txt  config.json  pyproject.toml  setup.py
splinter/: splinter.py
